# ode_solvers

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rs_test_nightly.yml  rs_test_stable.yml  test.yml
benches/: array.rs  ndarray.rs  vec.rs
doc/: plot_lorenz.py
examples/: arrayfire.rs  complex_f32.rs  decay.rs  growth.rs  nalgebra.rs  ndarray.rs  point.rs  vec.rs
examples/template/: Makefile  benchmark.py  main.py
ode_integrate/: Cargo.toml  TODO.md
ode_integrate/.cargo/: config.toml
ode_integrate/benches/: array.rs  vec.rs
ode_integrate/examples/: complex_f32.rs  nalgebra.rs  ndarray.rs  point.rs  vec.rs
ode_integrate/src/: concepts.rs  lib.rs  methods.rs  prelude.rs
ode_integrate/src/concepts/: errors.rs  mod.rs  ode_def.rs  steppers.rs
ode_integrate/src/methods/: conditional.rs  helper_functions.rs  mod.rs  time_series.rs
ode_integrate/src/solvers/: fixed_step.rs  fixed_step_unit_tests.rs  mod.rs
ode_integrate/tests/: error_estimates.rs
ode_integrate/tests/error_estimate_tests/: error_estimates_scalar.rs  mod.rs
src/: lib.rs  lib_old.rs  prelude.rs
src/concepts/: algebra.rs  errors.rs  mod.rs  ode_def.rs  steppers.rs
src/methods/: conditional.rs  helper_functions.rs  mod.rs  time_series.rs
src/python_bindings/: mod.rs  solving.rs
src/solvers/: fixed_step.rs  fixed_step_unit_tests.rs  mod.rs
tests/: convergence.rs  error_estimates.rs
tests/convergence_tests/: convergence_scalar.rs  mod.rs
tests/error_estimate_tests/: error_estimates_scalar.rs  mod.rs
