# Copyright: Jonas Pleyer
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ode_solvers"
description="Collection of templated ODE Solvers applicable in many scenarios."
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
version = "0.0.1"
license = "Mozilla 2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jonaspleyer/ode_solvers"
keywords=["ODE", "Ordinary", "Differential", "Equation", "science"]
categories=["science", "mathematics"]

[dependencies]


[dev-dependencies]
ndarray = { version="0.15" }
nalgebra = { version="0.31" }
num = { version="0.4" }