# Copyright: Jonas Pleyer
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ode_integrate"
description="Collection of numerical ODE Solvers written in generics and thus applicable in many scenarios."
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
version = "0.0.2"
license = "MPL-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/jonaspleyer/ode_integrate"
keywords=["ODE", "Ordinary", "Differential", "Equation", "science"]
categories=["science", "mathematics"]
autoexamples = false

[[example]]
name = "nalgebra"

[[example]]
name = "arrayfire"


[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./doc/docs-header.html" ]


[dependencies]
itertools = { version="0.10" }


[dev-dependencies]
ndarray = { version="0.15" }
nalgebra = { version="0.31" }
num = { version="0.4" }
arrayfire = { version="3.8" }
approx = { version="0.5" }
f128 = { version="0.2" }
half = { version="2.1" }
