[workspace]
members = [
    "ode_integrate",
    "ode_integrate-numpy",
]

[workspace.package]
description="Collection of numerical ODE Solvers written in generics and thus applicable in many scenarios."
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]
version = "0.0.2"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonaspleyer/ode_integrate"
keywords=["ODE", "Ordinary", "Differential", "Equation", "science"]
categories=["science", "mathematics"]

[workspace.dependencies]
num = "0.4"
itertools = "0.10"
plotters = "0.3"
rand = { version="0.8", features = ["small_rng"] }
rand_chacha = { version="0.3.1", features=["serde1"] }
serde = "1.0"

[workspace.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./doc/docs-header.html"]
