# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ode_integrate"
description="Collection of numerical ODE Solvers written in generics and thus applicable in many scenarios."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
readme = "README.md"
repository.workspace = true
keywords=["ODE", "Ordinary", "Differential", "Equation", "science"]
categories=["science", "mathematics", "no-std"]
autoexamples = false

[[example]]
name = "nalgebra"

[[example]]
name = "arrayfire"

[[example]]
name = "complex_f32"

[[bench]]
name = "array"
harness = false

[dependencies]


[dev-dependencies]
ndarray = { version="0.15" }
nalgebra = { version="0.31" }
num = { version="0.4" }
arrayfire = { version="3.8" }
approx = { version="0.5" }
f128 = { version="0.2" }
half = { version="2.1" }
criterion = { version="0.4" }
